parser.grammar
ROOT = FUNC_DEF

FUNC_DEF = BASE_TYPE NAME ARGS O_BRAC EXPR C_BRAC

EXPR = LITERAL

ARGS = O_PARAN VARIABLES C_PARAN
ARGS = O_PARAN C_PARAN

VARIABLES = VARIABLE
VARIABLES = VARIABLE VARIABLES

VARIABLE = BASE_TYPE NAME
VARIABLE = BASE_TYPE NAME ASSIGN_OP(=) LITERAL

LITERAL = NUMERIC
LITERAL = STRING
LITERAL = CHARACTER
LITERAL = BOOLEAN
